--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "vue": "^2.5.16",
-    "vue-cli": "^2.9.3",
     "vue-loader": "14.2.2",
-    "vue-template-compiler": "^2.5.16",
-    "vuetify": "^1.0.18"
+    "vue-template-compiler": "^2.5.16"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
